--- a/app/src/main/res/layout/table_item.xml
+++ b/app/src/main/res/layout/table_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_alignParentBottom="true"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+
    >
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:padding="10dp"
 
         >
@@ -22,22 +22,23 @@
 
         />
 
-
         <TextView
+            android:layout_alignTop="@+id/table_btn"
+            android:layout_gravity="center|top"
             android:gravity="center"
             android:layout_marginTop="5dp"
-            android:layout_gravity="center|top"
-            android:layout_above="@+id/table_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:text="Large Text"
             android:id="@+id/firstText"
             />
 
         <TextView
+            android:layout_alignTop="@+id/table_btn"
+            android:layout_alignParentTop="true"
             android:textColor="#ffffff"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_above="@+id/table_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,6 +48,8 @@
             android:layout_marginBottom="7dp"/>
 
 
-    </FrameLayout>
 
-</RelativeLayout>
+
+    </RelativeLayout>
+
+</LinearLayout>
