--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -234,7 +234,7 @@ and Loops"
 
                 />
         </LinearLayout>
-        <FrameLayout
+        <LinearLayout
             android:id="@+id/btn6"
             android:orientation="vertical"
             android:layout_width="wrap_content"
@@ -246,7 +246,7 @@ and Loops"
             android:background="@drawable/color_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button6"
+            android:id="@+id/Test"
              >
             <ImageView
                 android:layout_gravity="center"
@@ -267,10 +267,10 @@ and Loops"
                 android:textSize="20dp"
                 android:layout_marginTop="5dp"
                 android:id="@+id/textView6"
-                android:layout_below="@+id/button6"
+                android:layout_below="@+id/Test"
 
                 />
-        </FrameLayout>
+        </LinearLayout>
 
 
 
