--- a/app/src/main/res/layout/table_item.xml
+++ b/app/src/main/res/layout/table_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
 
    >
 
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:padding="10dp"
 
         >
@@ -19,11 +19,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/table_btn"
+        android:stateListAnimator="@null"
 
         />
 
         <TextView
-            android:layout_alignTop="@+id/table_btn"
+            android:layout_alignParentTop="true"
             android:layout_gravity="center|top"
             android:gravity="center"
             android:layout_marginTop="5dp"
@@ -35,7 +36,6 @@
             />
 
         <TextView
-            android:layout_alignTop="@+id/table_btn"
             android:layout_alignParentTop="true"
             android:textColor="#ffffff"
             android:textSize="20sp"
@@ -50,6 +50,6 @@
 
 
 
-    </RelativeLayout>
+    </FrameLayout>
 
-</LinearLayout>
+</RelativeLayout>
