--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,6 +6,7 @@
             android:id="@+id/home"
             android:title="Home" />
         <item
+            android:enabled="false"
             android:id="@+id/compiler"
             android:icon="@drawable/coding"
             android:title="Code Playground" />
@@ -14,23 +15,24 @@
             android:icon="@drawable/glossary"
             android:title="Glossary" />
         <item
+            android:enabled="false"
             android:id="@+id/invite"
             android:icon="@drawable/invite"
             android:title="Inivite Friends" />
+
+        <item
+            android:enabled="false"
+            android:id="@+id/settings"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Settings" />
+        <item
+            android:enabled="false"
+            android:id="@+id/rate"
+            android:icon="@drawable/star"
+            android:title="Rate" />
+
     </group>
 
-<group>
 
-        <menu>
-            <item
-                android:id="@+id/settings"
-                android:icon="@drawable/ic_menu_manage"
-                android:title="Settings" />
-            <item
-                android:id="@+id/rate"
-                android:icon="@drawable/star"
-                android:title="Rate" />
-        </menu>
-</group>
 
 </menu>
