--- a/app/src/main/res/layout/complete_test.xml
+++ b/app/src/main/res/layout/complete_test.xml
@@ -123,6 +123,29 @@
                     android:id="@+id/E5"/>
             </LinearLayout>
 
+            <RelativeLayout
+                android:gravity="center_vertical|right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true">
+
+                <Button
+                    android:paddingRight="5dp"
+                    android:paddingLeft="5dp"
+                    android:background="#8BC34A"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Finish"
+                    android:id="@+id/check"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="10dp"/> </RelativeLayout>
+
         </LinearLayout>
     </ScrollView>
 
