--- a/app/src/main/res/layout/viewpager_test.xml
+++ b/app/src/main/res/layout/viewpager_test.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -57,9 +56,8 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Small Text"
             android:id="@+id/attemps"
-
-            android:paddingRight="10dp"
-            /> </LinearLayout>
+            android:paddingRight="10dp"/>
+        </LinearLayout>
     </RelativeLayout>
 
     <TextView
